--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "count": "node src/scripts/countContacts.js",
     "remove-last": "node src/scripts/removeLastContact.js",
     "remove-all": "node src/scripts/removeAllContacts.js",
-    "remove-dellet": "node src/scripts/removeRandomProduct.js"
+    "remove-delletrandom": "node src/scripts/removeRandomProduct.js"
   },
   "keywords": [],
   "author": "",
